# custom_harness

./: .gitignore  README.md  agent.py  performance_comparison.md
agentic_ai_py/: README.md  SKILL.md  agent.py  dashboard.py
agentic_ai_py/.obsidian/: graph.json
agentic_ai_py/docs/: architecture.md
agentic_ai_py/test/: eslint.config.js
agentic_ai_rs/: Cargo.toml  README.md  package-lock.json  package.json
agentic_ai_rs/.obsidian/: appearance.json
agentic_ai_rs/docs/: architecture.md  custom_prompting.md  performance_comparison.md
agentic_ai_rs/src/: lib.rs
