[package]
name = "agentic_ai_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
walkdir = "2"
regex = "1"
similar = "2"
dotenv = "0.15"
crossterm = "0.27"
anyhow = "1.0"
urlencoding = "2.1"

